plugins {
	id 'java'
	id 'checkstyle'

	id 'org.springframework.boot' version '2.5.5'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
}

group = 'ch.rfobaden.incidentmanager'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

def springVersion = '2.5.5'

repositories {
	mavenCentral()
}

apply plugin: 'application'
mainClassName = 'ch.rfobaden.incidentmanager.backend.Application'

dependencies {
	implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springVersion}"
	implementation "org.springframework.boot:spring-boot-starter-web:${springVersion}"

	runtimeOnly 'mysql:mysql-connector-java:8.0.25'

	testImplementation "org.springframework.boot:spring-boot-starter-test:${springVersion}"

	testImplementation 'com.h2database:h2:1.4.200'

	developmentOnly "org.springframework.boot:spring-boot-devtools:${springVersion}"
}

configurations {
	developmentOnly
	runtimeClasspath {
		extendsFrom developmentOnly
	}

	checkstyleConfig
}

test {
	useJUnitPlatform()
}

checkstyle {
	toolVersion "9.0"
	configFile file("config/checkstyle/checkstyle.xml")
	showViolations = true
	ignoreFailures = false
}
checkstyleMain {
	source = "src/main/java"
}
checkstyleTest {
	source = "src/test/java"
}
tasks.withType(Checkstyle) {
	reports {
		xml.required.set(false)
		html.required.set(true)
	}
}
